[package]
name = "ampsc"
version = "0.1.0"
edition = "2021"

[dependencies]
logwise = {version = "~0"}
continuation = {git = "ssh://gitea@gitea.mermaid-gecko.ts.net/Metropolis/continuation.git"}

thiserror = "*"

[dev-dependencies]
truntime = {git = "ssh://gitea@gitea.mermaid-gecko.ts.net/Metropolis/truntime.git"}